--- a/src/scss/blocks/first_screen/first_screen.scss
+++ b/src/scss/blocks/first_screen/first_screen.scss
@@ -105,9 +105,18 @@
     // }
   }
 
-  &__arrows:hover {
-    svg path {
-      fill: $holland-red;
+  &__arrows {
+    &_fill:hover {
+      // background-color: #fff;
+      svg path {
+        
+        fill: $holland-red;
+      }
+      
+
+
+
+
     }
   }
 
