--- a/src/scss/blocks/header/_header.scss
+++ b/src/scss/blocks/header/_header.scss
@@ -80,7 +80,12 @@ nav {
     margin-left: 20px;
     width: 26px;
     height: 22px;
-
+    &_fill:hover {
+      svg path {
+        
+        fill: $holland-red;
+      }
+    }
   }
 
   &__hr {
