--- a/src/scss/blocks/approach/approach.scss
+++ b/src/scss/blocks/approach/approach.scss
@@ -118,44 +118,44 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 19px;
-
+      margin-bottom: 14px;
       text-transform: uppercase;
       color: $industrial-revolution;
     }
 
 
 
-    &_progressbar-1 {
-      transform: translate(30px, -17px);
-      display: block;
-      width: 117px;
-      height: 14px;
-      background: $holland-red
-    }
+    // &_progressbar-1 {
+    //   transform: translate(30px, -17px);
+    //   display: block;
+    //   width: 117px;
+    //   height: 14px;
+    //   background: $holland-red
+    // }
 
-    &_progressbar-2 {
-      transform: translate(30px, -17px);
-      display: block;
-      width: 99px;
-      height: 14px;
-      background: $holland-red
-    }
+    // &_progressbar-2 {
+    //   transform: translate(30px, -17px);
+    //   display: block;
+    //   width: 99px;
+    //   height: 14px;
+    //   background: $holland-red
+    // }
 
-    &_progressbar-3 {
-      transform: translate(30px, -17px);
-      display: block;
-      width: 153px;
-      height: 14px;
-      background: $holland-red
-    }
+    // &_progressbar-3 {
+    //   transform: translate(30px, -17px);
+    //   display: block;
+    //   width: 153px;
+    //   height: 14px;
+    //   background: $holland-red
+    // }
 
-    &_progressbar-4 {
-      transform: translate(30px, -17px);
-      display: block;
-      width: 303px;
-      height: 14px;
-      background: $holland-red
-    }
+    // &_progressbar-4 {
+    //   transform: translate(30px, -17px);
+    //   display: block;
+    //   width: 303px;
+    //   height: 14px;
+    //   background: $holland-red
+    // }
   }
 }
 
