--- a/src/scss/blocks/footer/footer.scss
+++ b/src/scss/blocks/footer/footer.scss
@@ -104,7 +104,7 @@
       resize: none;
       font-size: 12px;
       font-weight: bold;
-
+      outline: none;
       display: block;
       border: none;
 
