--- a/src/scss/blocks/costs/_costs.scss
+++ b/src/scss/blocks/costs/_costs.scss
@@ -2,17 +2,31 @@
   height: 886px;
   background: $background-eternity;
 
+  &__reduction {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+
+      transform: translate(-30px, -30px);
+      background-color: $industrial-revolution;
+      width: 6px;
+      height: 150px;
+
+    }
+  }
 
   &__columns {
     display: flex;
     flex-direction: column;
     width: 50%;
-    
+
     &_item {
-    //   margin-top: 0;
-    &:first-child {
-          margin-top: 120px;
-        }
+
+      //   margin-top: 0;
+      &:first-child {
+        margin-top: 120px;
+      }
 
       &-hr {
         width: 720px;
@@ -20,7 +34,7 @@
         background: $balsamic-reduction;
         border: none;
 
-        
+
 
       }
 
@@ -43,6 +57,7 @@
           height: 90px;
 
         }
+
         // &::after {
         //     content: "//";
         //     display: block;
@@ -53,8 +68,8 @@
         //     line-height: 30px;
         //     transform: translate(2px, -32px);
         //     color: $balsamic-reduction;
-            
-  
+
+
         //   }
       }
     }
@@ -90,6 +105,7 @@
       top: 5952px;
       border: 2px solid $ambience-white;
       background: $background-eternity;
+
       &:hover {
         border-color: $holland-red;
         color: $holland-red;
