--- a/src/scss/blocks/header/_header.scss
+++ b/src/scss/blocks/header/_header.scss
@@ -21,6 +21,7 @@ nav {
 #menu__logo_img-hidden {
   display: none;
 }
+
 #menu__icon-hidden {
   display: none;
 }
@@ -39,9 +40,10 @@ nav {
   list-style-type: none;
 
 
-  
+
   &__contacts {
     &_phone {
+      display: block;
       margin-top: 43px;
       margin-left: 55px;
       font-style: normal;
@@ -51,6 +53,11 @@ nav {
       text-align: right;
       color: $ambience-white;
       width: 157px;
+
+      a {
+        text-decoration: none;
+
+      }
 
       &:hover {
         color: $holland-red;
@@ -76,7 +83,7 @@ nav {
     width: 164px;
     height: 36px;
 
-    
+
 
 
   }
@@ -86,9 +93,10 @@ nav {
     margin-left: 20px;
     width: 26px;
     height: 22px;
+
     &_fill:hover {
       svg path {
-        
+
         fill: $holland-red;
       }
     }
