--- a/src/scss/blocks/services/services.scss
+++ b/src/scss/blocks/services/services.scss
@@ -50,15 +50,17 @@
     }
 
     img {
-      width: 86px;
-      height: 86px;
+      width: 119px;
+      height: 119px;
+      // width: 86px;
+      // height: 86px;
     }
 
     &_head {
       margin-top: 40px;
       font-style: normal;
       font-weight: 700;
-      font-size: 14px;
+      font-size: 20px;
       line-height: 19px;
 
 
@@ -84,7 +86,7 @@
       height: 60px;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 18px;
       line-height: 30px;
       color: $background-eternity;
     }
