--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -25,6 +25,8 @@
   }
 
   .costs {
+    height: 906px;
+
     &__columns {
       &_item {
         margin-left: 0;
@@ -599,6 +601,8 @@
   }
 
   .costs {
+    height: 935px;
+
     &__columns {
 
       &_item {
@@ -941,7 +945,7 @@
   }
 
   .costs {
-    min-height: 1193px;
+    min-height: 1249px;
 
     &__columns {
       &_item {
@@ -1017,8 +1021,9 @@
 
 @media (max-width: 567px) {
   .costs {
-    min-height: 1235px;
+    min-height: 1256px;
   }
+
   .services {
     &__columns {
       flex-wrap: wrap;
@@ -1056,6 +1061,7 @@
 
   .approach {
     min-height: 1834px;
+
     &__h2 {
       font-size: 36px;
       line-height: 49px;
@@ -1080,7 +1086,7 @@
       width: 100%;
 
       &:nth-child(1) {
-        
+
 
         &::after {
           content: "";
@@ -1341,6 +1347,11 @@
       line-height: 49px;
     }
   }
+
+  .costs {
+    min-height: 1295px;
+  }
+
 }
 
 @media (max-width: 441px) {
@@ -1384,7 +1395,7 @@
 
 
   .costs {
-    min-height: 1330px;
+    min-height: 1466px;
 
     &__columns_item-name::before {
       height: 150px;
@@ -1410,14 +1421,17 @@
     position: absolute;
     margin-left: 75px;
   }
+
   #menu__icon-hidden {
     display: block;
     position: absolute;
     margin-left: 10px;
   }
+
   .hamburger {
     position: absolute;
     margin-left: 150px;
+
     &::before {
       display: none;
     }
@@ -1426,12 +1440,13 @@
   #menu__logo_img {
     display: none;
   }
+
   #menu__icon {
     display: none;
   }
 
   .costs {
-    min-height: 1455px;
+    min-height: 1528px;
 
   }
 
@@ -1447,23 +1462,29 @@
       font-size: 32px;
       text-align: center;
     }
+
     &__prev {
       text-align: center;
     }
+
     &__anypoint {
       text-align: center;
     }
+
     &__slash {
       display: block;
       margin: 0 auto;
       margin-top: 30px;
     }
+
     &__descr {
       text-align: center;
     }
+
     &__arrows {
       text-align: center;
     }
+
     &__imgbig {
       width: 290px;
       height: 290px;
